force-app/main/default/objects/S2S_Skill_Mapping__c/S2S_Skill_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>S2S Skill Mapping</label>
</CustomObject>