force-app/main/default/objects/S2S_Skill_Mapping__c/fields/Assign_To_Field__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assign To Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>