force-app/main/default/objects/S2S_Skill_Mapping__c/fields/Condition1_Field__c.field-meta.xml
<CustomField>
    <fullName>Condition1_Field__c</fullName>
    <description>Field to store API name of case field to check</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Condition1 Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>