force-app/main/default/objects/S2S_Skill_Mapping__c/fields/Condition1_Value__c.field-meta.xml
<CustomField>
    <fullName>Condition1_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condition1 Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>