force-app/main/default/objects/S2S_Skill_Mapping__c/fields/Payroll_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Matches on whether or not the PRS is filled out on the client record</inlineHelpText>
    <label>In Service?</label>
    <type>Checkbox</type>
</CustomField>