force-app/main/default/objects/S2S_Skill_Mapping__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product</label>
    <length>20</length>
    <type>Text</type>
</CustomField>