force-app/main/default/objects/S2S_Skill_Mapping__c/fields/Revenue_Location__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revenue Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>