force-app/main/default/objects/S2S_Skill_Mapping__c/fields/Service_Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Model_Type__c</fullName>
    <description>Holds the Service Model Type value to look for. If this is populated, the code will match just this and the product while ignoring everything else.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Holds the Service Model Type value to look for. If this is populated, the code will match just this and the product while ignoring everything else.</inlineHelpText>
    <label>Service Model Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>