force-app/main/default/objects/S2S_Skill_Mapping__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Skill</label>
    <length>20</length>
    <type>Text</type>
</CustomField>