force-app/main/default/objects/S2S_Skill_Mapping__c/listViews/Detailed_View.listView-meta.xml
<ListView>
    <fullName>Detailed_View</fullName>
    <columns>NAME</columns>
    <columns>Skill__c</columns>
    <columns>Product__c</columns>
    <columns>Assign_To_Field__c</columns>
    <columns>Payroll_Specialist__c</columns>
    <columns>Condition1_Field__c</columns>
    <columns>Condition1_Value__c</columns>
    <columns>Service_Model_Type__c</columns>
    <columns>Revenue_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detailed View</label>
</ListView>